--- a/site/css/grayscale.css
+++ b/site/css/grayscale.css
@@ -99,8 +99,9 @@ a {
   padding: 100px 0;
   text-align: center;
   color: white;
-  background: url(../img/intro-bg.jpg) no-repeat bottom center scroll;
+  background: url(../img/newBack.png) no-repeat bottom center scroll;
   background-color: black;
+  background-attachment: fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
@@ -180,12 +181,15 @@ a {
   width: 100%;
   padding: 50px 0;
   color: white;
-  background: url(../img/downloads-bg.jpg) no-repeat center center scroll;
+  background: url(../img/newBack.png) no-repeat bottom center scroll;
+  background-color: black;
+  background-attachment: fixed;
+  /*background: url(../img/downloads-bg.jpg) no-repeat center center scroll;
   background-color: black;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
-  -o-background-size: cover; }
+  -o-background-size: cover; */}
 
 @media (min-width: 767px) {
   .content-section {
