--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -152,7 +152,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; {{ site.time | date: '%Y' }} -  Michael Krause </p>
+            <p>Copyright &copy; {{ site.time | date: '%Y' }} -  Michael Krause. WIP.</p>
         </div>
     </footer>
 
