--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -119,7 +119,7 @@
                 <h2>Projects</h2>
                 <p>Some of the projects I've worked on over the years:</p>
                 <h3>TJ Time</h3>
-                <p>A project to help TJ Students get around school on time and in the know</p>
+                <p>A Pebble watchapp project to help TJ Students get around school on time and in the know</p>
             </div>
         </div>
     </section>
